fix for smooth generate
